--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div class="background" id="backgroundA" onclick="location.href='portfolio.html'"><p class="p-a">CV<br>&<br>STUFF</p></div>
-    <div class="background" id="backgroundB" onclick="window.open('cv.html', '_blank')" ><p class="p-b">PORTFOLIO<br>&<br>STUFF</p></div>
+    <div id="custom-cursor"></div>
+    <div class="background" id="backgroundA"><p class="p-a">CV<br>&<br>STUFF</p></div>
+    <div class="background" id="backgroundB"><p class="p-b">PORTFOLIO<br>&<br>STUFF</p></div>
     <script src="index.js"></script>
 </body>
 </html>
