--- a/newslider.html
+++ b/newslider.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="newslider.css">
 </head>
 <body>
@@ -57,112 +57,112 @@
     <section class="swiper-section">
         <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
             <swiper-slide>
-                <div class="logo-div" style="background-image: url(assets/Active\ mode\ logo\ bg-min.jpg); background-size: contain; background-repeat: no-repeat; background-position: center;">
+                <div class="logo-div" style="background-image: url(assets/Active\ mode\ logo\ bg-min.jpg);">
                     <img class="logo-img" src="assets/active mode logo.png">
                 </div>
             </swiper-slide>
             <swiper-slide>
-                <div class="logo-div" style="background-image: url(assets/Tottaly\ jasmine\ logo\ bg-min.jpg); background-size: contain; background-repeat: no-repeat; background-position: center;">
+                <div class="logo-div" style="background-image: url(assets/Tottaly\ jasmine\ logo\ bg-min.jpg);" >
                     <img class="logo-img" src="assets/totally jasmin logo.png">
                 </div>
             </swiper-slide>
             <swiper-slide>
-                <div class="logo-div" style="background-image: url(assets/Emuse\ logo\ bg-min.jpg); background-size: contain; background-repeat: no-repeat; background-position: center;">
+                <div class="logo-div" style="background-image: url(assets/Emuse\ logo\ bg-min.jpg);" >
                     <img class="logo-img" src="assets/emuse logo.png">
                 </div>
             </swiper-slide>
             <swiper-slide>
-                <div class="logo-div" style="background-color: #1C1D1D; background-size: contain; background-repeat: no-repeat; background-position: center;">
+                <div class="logo-div" style="background-color: #1C1D1D;" >
                     <img class="logo-img" src="assets/zbuzz logo.png">
                 </div>
             </swiper-slide>
             <swiper-slide>
-                <div class="logo-div" style="background-image: url(assets/Middle\ litoral\ logo\ bg-min.jpg); background-size: contain; background-repeat: no-repeat; background-position: center;">
+                <div class="logo-div" style="background-image: url(assets/Middle\ litoral\ logo\ bg-min.jpg);" >
                     <img class="logo-img" src="assets/middle litoral logo.png">
                 </div>
             </swiper-slide>
             <swiper-slide>
-                <div class="logo-div" style="background-color: #1D315C; background-size: contain; background-repeat: no-repeat; background-position: center;">
+                <div class="logo-div" style="background-color: #1D315C;" >
                     <img class="logo-img" src="assets/aaz trading co logo.png">
                 </div>
             </swiper-slide>
             <swiper-slide>
-                <div class="logo-div" style="background-image: url(assets/Charm\ of\ the\ elements\ logo\ bg-min.jpg); background-size: contain; background-repeat: no-repeat; background-position: center;">
+                <div class="logo-div" style="background-image: url(assets/Charm\ of\ the\ elements\ logo\ bg-min.jpg);" >
                     <img class="logo-img" src="assets/charm of  the elements logo.png">
                 </div>
             </swiper-slide>
             <swiper-slide>
-                <div class="logo-div" style="background-image: url(assets/Katia\ G\ Saade\ logo\ bg-min.jpg); background-size: contain; background-repeat: no-repeat; background-position: center;">
+                <div class="logo-div" style="background-image: url(assets/Katia\ G\ Saade\ logo\ bg-min.jpg);" >
                     <img class="logo-img" src="assets/katia g saade logo.png">
                 </div>
             </swiper-slide>
             <swiper-slide>            
-                <div class="logo-div" style="background-image: url(assets/Gallivanters\ log\ logo\ bg-min.jpg); background-size: contain; background-repeat: no-repeat; background-position: center;">
-                    <img class="logo-img" src="assets/galivanter log logo.png">
+                <div class="logo-div" style="background-image: url(assets/Gallivanters\ log\ logo\ bg-min.jpg);" >
+                    <img class="logo-img" src="assets/galivanter log logo.png" style="max-width: 500px;">
                 </div>
             </swiper-slide>
             <swiper-slide>
-                <div class="logo-div" style="background: linear-gradient(160deg, #363642 25.84%, #0B0B0C 76.08%); background-size: contain; background-repeat: no-repeat; background-position: center;">
+                <div class="logo-div" style="background: linear-gradient(160deg, #363642 25.84%, #0B0B0C 76.08%);" >
                     <img class="logo-img" src="assets/depo logo.png">
                 </div>
             </swiper-slide>
             <swiper-slide>
-                <div class="logo-div" style="background-image: url(assets/Kafroun\ paragliding\ logo\ bg-min.jpg); background-size: contain; background-repeat: no-repeat; background-position: center;">
+                <div class="logo-div" style="background-image: url(assets/Kafroun\ paragliding\ logo\ bg-min.jpg);" >
                     <img class="logo-img" src="assets/paragliding logo.png">
                 </div>
             </swiper-slide>
             <swiper-slide>
-                <div class="logo-div" style="background: #F8F5F1; background-size: contain; background-repeat: no-repeat; background-position: center;">
+                <div class="logo-div" style="background: #F8F5F1;" >
                     <img class="logo-img" src="assets/aaz leonardite logo.png">
                 </div>
             </swiper-slide>
             <swiper-slide>
-                <div class="logo-div" style="background: #FFFCF3; background-size: contain; background-repeat: no-repeat; background-position: center;">
+                <div class="logo-div" style="background: #FFFCF3;" >
                     <img class="logo-img" src="assets/jaz logo.png">
                 </div>
             </swiper-slide>
             <swiper-slide>
-                <div class="logo-div" style="background: #FFF; background-size: contain; background-repeat: no-repeat; background-position: center;">
+                <div class="logo-div" style="background: #FFF;" >
                     <img class="logo-img" src="assets/sudoculus logo.png">
                 </div>
             </swiper-slide>
             <swiper-slide>
-                <div class="logo-div" style="background-image: url(assets/Amal\ logo\ bg-min.jpg); background-size: contain; background-repeat: no-repeat; background-position: center;">
+                <div class="logo-div" style="background-image: url(assets/Amal\ logo\ bg-min.jpg);" >
                     <img class="logo-img" src="assets/amal logo.png">
                 </div>
             </swiper-slide>
             <swiper-slide>
-                <div class="logo-div" style="background-image: url(assets/Angelic\ Assosiation\ of\ Anis\ Saade\ logo\ bg-min.jpg); background-size: contain; background-repeat: no-repeat; background-position: center;">
+                <div class="logo-div" style="background-image: url(assets/Angelic\ Assosiation\ of\ Anis\ Saade\ logo\ bg-min.jpg);" >
                     <img class="logo-img" src="assets/aaas logo.png">
                 </div>
             </swiper-slide>
             <swiper-slide>
-                <div class="logo-div" style="background: #D7EBF2; background-size: contain; background-repeat: no-repeat; background-position: center;">
+                <div class="logo-div" style="background: #D7EBF2;" >
                     <img class="logo-img" src="assets/keenel logo.png">
                 </div>
             </swiper-slide>
             <swiper-slide>
-                <div class="logo-div" style="background: #FFFCF3; background-size: contain; background-repeat: no-repeat; background-position: center;">
+                <div class="logo-div" style="background: #FFFCF3;" >
                     <img class="logo-img" src="assets/zbowls logo.png">
                 </div>
             </swiper-slide>
             <swiper-slide>
-                <div class="logo-div" style="background-color: #FFDE17; background-size: contain; background-repeat: no-repeat; background-position: center;">
+                <div class="logo-div" style="background-color: #FFDE17;" >
                     <img class="logo-img" src="assets/walid logo.png">
                 </div>
             </swiper-slide>
             <swiper-slide>
-                <div class="logo-div" style="background-image: url(assets/Emuse\ logo\ bg-min.jpg); background-size: contain; background-repeat: no-repeat; background-position: center;">
+                <div class="logo-div" style="background-image: url(assets/Emuse\ logo\ bg-min.jpg);" >
                     <img class="logo-img" src="assets/emuse logo.png">
                 </div>
             </swiper-slide>
             <swiper-slide>
-                <div class="logo-div" style="background-image: url(assets/Golden\ dynasty\ logo\ bg-min.jpg); background-size: contain; background-repeat: no-repeat; background-position: center;">
+                <div class="logo-div" style="background-image: url(assets/Golden\ dynasty\ logo\ bg-min.jpg);" >
                     <img class="logo-img" src="assets/golden dynasty logo.png">
                 </div>
             </swiper-slide>
             <swiper-slide>
-                <div class="logo-div" style="background-color: #FDED1C; background-size: contain; background-repeat: no-repeat; background-position: center;">
+                <div class="logo-div" style="background-color: #FDED1C;" >
                     <img class="logo-img" src="assets/skylux avia logo.png">
                 </div>
             </swiper-slide>
