--- a/newslider.html
+++ b/newslider.html
@@ -169,5 +169,9 @@
         </swiper-container>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-element-bundle.min.js"></script>
+    <h1>Play my awesome game</h1>
+    <div class="center">
+        <iframe class="printer" src="https://scratch.mit.edu/projects/909201845/embed" allowtransparency="true" width="100%" height="100%" frameborder="0" scrolling="no" allowfullscreen></iframe>
+    </div>
 </body>
 </html>
