--- a/newslider.html
+++ b/newslider.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="newslider.css">
+    <link rel="stylesheet" href="./font/font.css">
 </head>
 <body>
     <h1>Websites</h1>
     <section class="swiper-section">
         <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
             <swiper-slide>   
-                <img class="project-img" src="assets/HR-min.png" style="background: #253946d1;">     
+                <img class="project-img" src="assets/HR-min.png" style="background: #253946d1;">  
+                <a class="morebutton" href="project/lift99-hr.html">Check it out -></a>   
             </swiper-slide>
             <swiper-slide>
                 <img class="project-img" src="assets/Coaches for Ukraine-min.png" style="background: #434c5ab9;">
