--- a/project/lift99-hr.html
+++ b/project/lift99-hr.html
@@ -13,30 +13,52 @@
 <body>
     <section>
         <img class="fullwidth" src="../assets/hr 1.png">
+    </section>
+    <section>
         <div class="h1div">
             <h1>LIFT99 HR</h1>
         </div>
+    </section>
+    <section>
         <p class="highlighted">
             my contribution:<br>-> web Design<br>-> Web Development<br>-> Product Design
         </p> 
-        <p>
-            +Super duper filtering system
-        </p>
-        <img class="fullwidth" src="../assets/hr 2.png">
-        <p style="margin-top: -120px;">
-            + Company portal<br>
-            + Airtable integration<br>
-            + User management systems
-        </p>
-        <p>
-            + Extensive CMS
-        </p>
-        <img class="fullwidth" src="../assets/hr 3.png">
-        <p>
-            + Designed for all screens
-        </p>
-        <img class="fullwidth" src="../assets/hr 4.png">
-
     </section>
+    <section>
+        <div class="arrowdiv">
+            <p>
+                +Super duper filtering system
+            </p>
+            <img style="position: absolute; right: -120px; top: 65px;" src="../assets/arrow 1.svg" >
+        </div>
+        <img class="fullwidth" style="width: 95%;" src="../assets/hr 2.png">
+        <div class="arrowdiv">
+            <p style="margin-top: -120px;">
+                + Company portal<br>
+                + Airtable integration<br>
+                + User management systems
+            </p>
+            <img style="position: absolute; right: -260px; bottom: 50px;" src="../assets/arrow 2.svg" >
+        </div>
+    </section>
+    <section>
+        <div class="arrowdiv">
+            <p>
+                + Extensive CMS
+            </p>
+            <img style="position: absolute; right: -160px; top: 50px;" src="../assets/arrow 3.svg" >
+        </div>
+        <img class="fullwidth" src="../assets/hr 3.png">
+    </section>
+    <section>
+        <div class="arrowdiv">
+            <p>
+                + Designed for all screens
+            </p>
+            <img style="position: absolute; right: -290px; top: 40px;" src="../assets/arrow 4.svg" >
+        </div>
+        <img class="fullwidth" src="../assets/hr 4.png">
+    </section>
+    <script src="project.js"></script>
 </body> 
 </html>
