help99 project added

--- a/project/lift99-hr.html
+++ b/project/lift99-hr.html
@@ -10,18 +10,20 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Coda:wght@400;800&display=swap" rel="stylesheet">
 </head>
-<body>
-    <section>
-        <img class="fullwidth" src="../assets/hr 1.png">
-    </section>
+<body style="background: #253946;
+">
+    <img class="fullwidth" src="../assets/hr 1.png">
     <section>
         <div class="h1div">
             <h1>LIFT99 HR</h1>
         </div>
     </section>
     <section>
-        <p class="highlighted">
-            my contribution:<br>-> web Design<br>-> Web Development<br>-> Product Design
+        <p class="highlighted smaller">
+            my contribution:
+        </p>
+        <p class="highlighted removetop">
+            -> web Design<br>-> Webflow Development<br>-> Product Design
         </p> 
     </section>
     <section>
