--- a/newslider.html
+++ b/newslider.html
@@ -29,6 +29,7 @@
             </swiper-slide>
             <swiper-slide>
                 <img class="project-img" src="assets/Help99-min.png" style="background: linear-gradient(155deg, #043016 5.33%, rgba(55, 90, 50, 0.66) 36.6%, #0F2F04 90.9%);">
+                <a class="morebutton" href="project/help99.html">Check it out -></a>   
             </swiper-slide>
             <swiper-slide>
                 <img class="project-img" src="assets/AAZ web preview-min.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);">
