added new project

--- a/newslider.html
+++ b/newslider.html
@@ -17,12 +17,14 @@
             </swiper-slide>
             <swiper-slide>
                 <img class="project-img" src="assets/Coaches for Ukraine-min.png" style="background: #434c5ab9;">
+                <a class="morebutton" href="project/coaching.html">Check it out -></a>   
             </swiper-slide>
             <swiper-slide>
                 <img class="project-img" src="assets/Pilar-1-min.png" style="background: linear-gradient(18deg, #59111fe0 28.56%, #ad2f2fd7 71.41%), #ffffffb7;">
             </swiper-slide>
             <swiper-slide>
                 <img class="project-img" src="assets/ZBuzz-1-min.png" style="background: #9d9d9db4;">
+                <a class="morebutton" href="project/zbuzz.html">Check it out -></a>
             </swiper-slide>
             <swiper-slide>
                 <img class="project-img" src="assets/DAO-min.png" style="background: #311742d6;">
