--- a/newslider.html
+++ b/newslider.html
@@ -38,6 +38,7 @@
             </swiper-slide>
             <swiper-slide>
                 <img class="project-img" src="assets/Sudoculus-1-min.png" style="background: #4e5560ce;">
+                <a class="morebutton" href="project/sudoculus.html">Check it out -></a>
             </swiper-slide>
             <swiper-slide>
                 <img class="project-img" src="assets/Art of scandenavia web preview-min.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);">
@@ -48,10 +49,12 @@
     <section class="swiper-section">
         <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
             <swiper-slide>   
-                <img class="project-img" src="assets/Sudoculus app.jpg">     
+                <img class="project-img" src="assets/Sudoculus app.jpg"> 
+                <a class="morebutton" href="project/sudoculus.html">Check it out -></a>    
             </swiper-slide>
             <swiper-slide>
                 <img class="project-img" src="assets/Active mode-min.png" style="background: #434c5ad1;">
+                <a class="morebutton" href="project/active-mode.html">Check it out -></a>
             </swiper-slide>
             <swiper-slide>
                 <img class="project-img" src="assets/word puzzle.jpg">
@@ -65,6 +68,7 @@
                 <div class="logo-div" style="background-image: url(assets/Active\ mode\ logo\ bg-min.jpg);">
                     <img class="logo-img" src="assets/active mode logo.png">
                 </div>
+                <a class="morebutton" href="project/active-mode.html">Check it out -></a>
             </swiper-slide>
             <swiper-slide>
                 <div class="logo-div" style="background-image: url(assets/Tottaly\ jasmine\ logo\ bg-min.jpg);" >
@@ -130,6 +134,7 @@
                 <div class="logo-div" style="background: #FFF;" >
                     <img class="logo-img" src="assets/sudoculus logo.png">
                 </div>
+                <a class="morebutton" href="project/sudoculus.html">Check it out -></a>
             </swiper-slide>
             <swiper-slide>
                 <div class="logo-div" style="background-image: url(assets/Amal\ logo\ bg-min.jpg);" >
