--- a/newslider.html
+++ b/newslider.html
@@ -21,6 +21,7 @@
             </swiper-slide>
             <swiper-slide>
                 <img class="project-img" src="assets/Pilar-1-min.png" style="background: linear-gradient(18deg, #59111fe0 28.56%, #ad2f2fd7 71.41%), #ffffffb7;">
+                <a class="morebutton" href="project/pilar-elias-art.html">Check it out -></a>
             </swiper-slide>
             <swiper-slide>
                 <img class="project-img" src="assets/ZBuzz-1-min.png" style="background: #9d9d9db4;">
@@ -35,13 +36,15 @@
             </swiper-slide>
             <swiper-slide>
                 <img class="project-img" src="assets/AAZ web preview-min.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);">
+                <a class="morebutton" href="project/Leonardite.html">Check it out -></a>
             </swiper-slide>
             <swiper-slide>
                 <img class="project-img" src="assets/Sudoculus-1-min.png" style="background: #4e5560ce;">
                 <a class="morebutton" href="project/sudoculus.html">Check it out -></a>
             </swiper-slide>
             <swiper-slide>
-                <img class="project-img" src="assets/Art of scandenavia web preview-min.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);">
+                <img class="project-img" src="assets/Art of scandenavia web preview.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);">
+                <a class="morebutton" href="project/artbay.html">Check it out -></a>
             </swiper-slide>
         </swiper-container>
     </section>
@@ -84,6 +87,7 @@
                 <div class="logo-div" style="background-color: #1C1D1D;" >
                     <img class="logo-img" src="assets/zbuzz logo.png">
                 </div>
+                <a class="morebutton" href="project/zbuzz.html">Check it out -></a>
             </swiper-slide>
             <swiper-slide>
                 <div class="logo-div" style="background-image: url(assets/Middle\ litoral\ logo\ bg-min.jpg);" >
@@ -123,12 +127,13 @@
             <swiper-slide>
                 <div class="logo-div" style="background: #F8F5F1;" >
                     <img class="logo-img" src="assets/aaz leonardite logo.png">
+                    <a class="morebutton" href="project/Leonardite.html">Check it out -></a>
                 </div>
             </swiper-slide>
             <swiper-slide>
                 <div class="logo-div" style="background: #FFFCF3;" >
                     <img class="logo-img" src="assets/jaz logo.png">
-                </div>
+                </div> 
             </swiper-slide>
             <swiper-slide>
                 <div class="logo-div" style="background: #FFF;" >
@@ -159,11 +164,6 @@
             <swiper-slide>
                 <div class="logo-div" style="background-color: #FFDE17;" >
                     <img class="logo-img" src="assets/walid logo.png">
-                </div>
-            </swiper-slide>
-            <swiper-slide>
-                <div class="logo-div" style="background-image: url(assets/Emuse\ logo\ bg-min.jpg);" >
-                    <img class="logo-img" src="assets/emuse logo.png">
                 </div>
             </swiper-slide>
             <swiper-slide>
