digital paintings added

--- a/newslider.html
+++ b/newslider.html
@@ -179,9 +179,45 @@
         </swiper-container>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-element-bundle.min.js"></script>
+    <h1>*Other*</h1>
     <h1>Play my awesome game</h1>
     <div class="center">
         <iframe class="printer" src="https://scratch.mit.edu/projects/909201845/embed" allowtransparency="true" width="100%" height="100%" frameborder="0" scrolling="no" allowfullscreen></iframe>
     </div>
+    <h1>Digital painting</h1>
+    <section class="swiper-section">
+        <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
+            <swiper-slide>
+                <img src="assets/bugeyes.jpg" style="background-color: #273128;" class="painting">
+            </swiper-slide>
+            <swiper-slide>
+                <img src="assets/book orb.jpg" style="background-color: #101010;" class="painting">
+            </swiper-slide>
+            <swiper-slide>
+                <img src="assets/skull.jpg" style="background-color: #222327;" class="painting">
+            </swiper-slide>
+            <swiper-slide>
+                <img src="assets/fruits edited.jpg" style="background-color: #B5B6BA;" class="painting">
+            </swiper-slide>
+            <swiper-slide>
+                <img src="assets/pot.jpg" style="background-color: #1C1F28;" class="painting">
+            </swiper-slide>
+            <swiper-slide>
+                <img src="assets/up.jpg" style="background-color: #224194;" class="painting">
+            </swiper-slide>
+            <swiper-slide>
+                <img src="assets/mulan.jpg" style="background-color: #FAD48B;" class="painting">
+            </swiper-slide>
+            <swiper-slide>
+                <img src="assets/prespective.jpg" style="background-color: #F0F0F0;" class="painting">
+            </swiper-slide>
+            <swiper-slide>
+                <img src="assets/eye.jpg" style="background-color: #49524F;" class="painting">
+            </swiper-slide>
+            <swiper-slide>
+                <img src="assets/fruits.jpg" style="background-color: #8D8E93;" class="painting">
+            </swiper-slide>
+        </swiper-container>
+    </section>
 </body>
 </html>
