--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zeina Saade</title>
     <link rel="stylesheet" href="index.css">
+    <header-links></header-links>
+    <script type="module" src="header.js/header-links-component.js"></script>
 </head>
 <body>
     <div class="background" id="backgroundA"><p class="p-a">CV<br>&<br>STUFF</p></div>
