--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="portfolio.css">
-    <link rel="stylesheet" href="./font/font.css">
+    <header-links></header-links>
+    <script type="module" src="header.js"></script>
 </head>
 <body>
     <h1>Websites</h1>
