--- a/portfolio.html
+++ b/portfolio.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="portfolio.css">
-    <header-links></header-links>
-    <script type="module" src="header.js"></script>
+    <link rel="icon" href="assets/favicon.png" type="image/x-icon">
 </head>
 <body>
     <h1>Websites</h1>
