--- a/cv.html
+++ b/cv.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="cv.css">
+    <link rel="icon" href="assets/favicon.png" type="image/x-icon">
     <title>Zeina Saade CV</title>
 </head>
 <body>
