--- a/index slider.html
+++ b/index slider.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index slider.css">
     <title>Your Portfolio</title>
+    <link rel="icon" href="assets/favicon.png" type="image/x-icon">
 </head>
 <body>
     <div id="main-menu">
