--- a/project/active-mode.html
+++ b/project/active-mode.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Active Mode project</title>
+    <link rel="icon" href="assets/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="project.css">
     <link rel="stylesheet" href="../font/font.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
