--- a/project/lift99-hr.html
+++ b/project/lift99-hr.html
@@ -45,6 +45,12 @@
         </div>
     </section>
     <section>
+        <p>
+            + Buzz feed style quizzes with a custom calculator
+        </p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/x5ruwQcsXeU?autoplay=1&controls=0&mute=1&loop=1&playlist=x5ruwQcsXeU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </section>
+    <section>
         <div class="arrowdiv">
             <p>
                 + Extensive CMS
