--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="portfolio.css">
+    <link rel="stylesheet" href="font/font.css">
     <link rel="icon" href="assets/favicon.png" type="image/x-icon">
 </head>
 <body>
