zbuzz video added

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="icon" href="assets/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="portfolio.css">
     <link rel="stylesheet" href="font/font.css">
-    <link rel="icon" href="assets/favicon.png" type="image/x-icon">
 </head>
 <body>
     <h1>Websites</h1>
@@ -219,6 +219,12 @@
                 <img src="assets/fruits.jpg" style="background-color: #8D8E93;" class="painting">
             </swiper-slide>
         </swiper-container>
+    </section>
+    <h1>Something cool</h1>
+    <section>
+        <div class="video-container">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/bOcN1J2Hgeo?autoplay=1&loop=1&playlist=bOcN1J2Hgeo&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
     </section>
 </body>
 </html>
