--- a/project/lift99-dao.html
+++ b/project/lift99-dao.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LIFT99 HR project</title>
+    <title>LIFT99 DAO project</title>
     <link rel="icon" href="assets/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="project.css">
     <link rel="stylesheet" href="../font/font.css">
@@ -16,7 +16,7 @@
     <img class="fullwidth" src="../assets/hr 1.png">
     <section>
         <div class="h1div">
-            <h1>LIFT99 HR</h1>
+            <h1>LIFT99 DAO</h1>
         </div>
     </section>
     <section>
@@ -46,10 +46,10 @@
     </section>
     <section>
         <p>
-            + Buzz feed style quizzes with a custom calculator
+            + Interactive menu design
         </p>
         <div class="video-container">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/x5ruwQcsXeU?autoplay=1&controls=0&mute=1&loop=1&playlist=x5ruwQcsXeU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/rrsV2M07kRY?autoplay=1&loop=1&playlist=rrsV2M07kRY&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
     </section>
     <section>
