--- a/project/lift99-dao.html
+++ b/project/lift99-dao.html
@@ -11,9 +11,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Coda:wght@400;800&display=swap" rel="stylesheet">
 </head>
-<body style="background: #253946;
-">
-    <img class="fullwidth" src="../assets/hr 1.png">
+<body style="background: #311742;">
+    <img class="fullwidth" src="../assets/dao 1.png">
     <section>
         <div class="h1div">
             <h1>LIFT99 DAO</h1>
@@ -24,25 +23,11 @@
             my contribution:
         </p>
         <p class="highlighted removetop">
-            -> web Design<br>-> Webflow Development<br>-> Product Design
+            -> web Design<br>-> Webflow Development
         </p> 
     </section>
     <section>
-        <div class="arrowdiv">
-            <p>
-                +Super duper filtering system
-            </p>
-            <img style="position: absolute; right: -120px; top: 65px;" src="../assets/arrow 1.svg" >
-        </div>
-        <img class="fullwidth" style="width: 95%;" src="../assets/hr 2.png">
-        <div class="arrowdiv">
-            <p style="margin-top: -120px;">
-                + Company portal<br>
-                + Airtable integration<br>
-                + User management systems
-            </p>
-            <img style="position: absolute; right: -260px; bottom: 50px;" src="../assets/arrow 2.svg" >
-        </div>
+        <img class="fullwidth" style="width: 95%;" src="../assets/dao 2.png">
     </section>
     <section>
         <p>
@@ -53,22 +38,7 @@
         </div>
     </section>
     <section>
-        <div class="arrowdiv">
-            <p>
-                + Extensive CMS
-            </p>
-            <img style="position: absolute; right: -160px; top: 50px;" src="../assets/arrow 3.svg" >
-        </div>
-        <img class="fullwidth" src="../assets/hr 3.png">
-    </section>
-    <section>
-        <div class="arrowdiv">
-            <p>
-                + Designed for all screens
-            </p>
-            <img style="position: absolute; right: -290px; top: 40px;" src="../assets/arrow 4.svg" >
-        </div>
-        <img class="fullwidth" src="../assets/hr 4.png">
+        <img class="fullwidth" src="../assets/dao 3.png">
     </section>
     <script src="project.js"></script>
 </body> 
