elements + testing nav

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="icon" href="assets/favicon.png" type="image/x-icon">
+    <script src="elements.js" defer></script>
+    <header-links></header-links>
     <link rel="stylesheet" href="portfolio.css">
-    <link rel="stylesheet" href="font/font.css">
 </head>
 <body>
     <h1>Websites</h1>
