--- a/project/zbuzz.html
+++ b/project/zbuzz.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ZBUZZ project</title>
-    <link rel="icon" href="assets/favicon.png" type="image/x-icon">
+    <script src="../elements.js"></script>
+    <header-links-projects></header-links-projects>
     <link rel="stylesheet" href="project.css">
-    <link rel="stylesheet" href="../font/font.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Coda:wght@400;800&display=swap" rel="stylesheet">
 </head>
 <body style="background-image: linear-gradient(155deg, #544B00 5.33%, rgba(20, 20, 19, 0.66) 36.6%, #2D4127 90.9%);">
     <img class="fullwidth" src="../assets/zbuzz 1.png">
