--- a/computer-portfolio.html
+++ b/computer-portfolio.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="computer-portfolio.css">
     <title>Zeina's portfolio</title>
-    <link rel="icon" href="assets/favicon.png" type="image/x-icon">
+    <script src="elements.js"></script>
+    <header-links></header-links>
 </head>
 <body>
     <section class="header-section">
