--- a/cv.html
+++ b/cv.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="cv.css">
-    <link rel="stylesheet" href="font/font.css">
-    <link rel="icon" href="assets/favicon.png" type="image/x-icon">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Coda:wght@400;800&display=swap" rel="stylesheet">
     <title>Zeina Saade CV</title>
+    <script src="elements.js"></script>
+    <header-links></header-links>
 </head>
 <body>
     <html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>Zeina Saade CV</title><style>
