--- a/index slider.html
+++ b/index slider.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index slider.css">
     <title>Your Portfolio</title>
-    <link rel="icon" href="assets/favicon.png" type="image/x-icon">
+    <script src="elements.js"></script>
+    <header-links></header-links>
 </head>
 <body>
     <div id="main-menu">
