--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zeina Saade</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="icon" href="assets/favicon.png" type="image/x-icon">
+    <script src="elements.js"></script>
+    <header-links></header-links>
 </head>
 <body>
     <div class="background" id="backgroundA"><p class="p-a">CV<br>&<br>STUFF</p></div>
