--- a/project/lift99-hr.html
+++ b/project/lift99-hr.html
@@ -4,15 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LIFT99 HR project</title>
-    <link rel="icon" href="assets/favicon.png" type="image/x-icon">
+    <script src="../elements.js"></script>
+    <header-links-projects></header-links-projects>
     <link rel="stylesheet" href="project.css">
-    <link rel="stylesheet" href="../font/font.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Coda:wght@400;800&display=swap" rel="stylesheet">
 </head>
-<body style="background: #253946;
-">
+<body style="background: #253946;">
     <img class="fullwidth" src="../assets/hr 1.png">
     <section>
         <div class="h1div">
