--- a/navigation.html
+++ b/navigation.html
@@ -21,33 +21,28 @@
                 </div>
             </div>
         </div>
-        <form
-            action="https://formspree.io/f/xleyzdvq"
-            method="POST"
-            >
-            <label>
-                Your email:
-                <input type="email" name="email">
-            </label>
-            <label>
-                Your message:
-                <textarea name="message"></textarea>
-            </label>
-            <!-- your other form fields go here -->
-            <button type="submit">Send</button>
-        </form>
-        <!-- <div class="contact-form-popup" id="contactForm">
+        <div class="contact-form-popup" id="contactForm">
             <div class="form-container">
                 <img class="close" onclick="closeForm()" src="assets/x.svg">
-                <form class="form" action="navigation.php" method="post">
-                    <h2>Contact Me</h2>
-                    <input class="input" type="text" name="name" placeholder="Name" required>
-                    <input class="input" type="email" name="email" placeholder="Email" required>
-                    <textarea class="input" name="message" placeholder="Message" required></textarea>
-                    <button class="button" type="submit">Submit</button>
+                <form class="form"
+                    action="https://formspree.io/f/xleyzdvq"
+                    method="POST"
+                    >
+                    <h2>Lets build awesomeness</h2>
+                    <label>
+                        <input placeholder="Your Email" type="email" name="email" class="input">
+                    </label>
+                    <label>
+                        <textarea placeholder="Subject" name="Subject" class="input"></textarea>
+                    </label>
+                    <label>
+                        <textarea placeholder="Tell me things" name="message" class="input"></textarea>
+                    </label>
+                    <!-- your other form fields go here -->
+                    <button class="button" type="submit">Send</button>
                 </form>
             </div>
-        </div> -->
+        </div>
     </menu-container>
 </body>
 </html>
