navigation added everywhere

--- a/computer-portfolio.html
+++ b/computer-portfolio.html
@@ -9,6 +9,8 @@
     <header-links></header-links>
 </head>
 <body>
+    <script src="navigation.js"></script>
+    <nav-menu></nav-menu>
     <section class="header-section">
         <div class="header-div">
             <p class="title">Z'S Portfolio</p>
