--- a/index slider.html
+++ b/index slider.html
@@ -9,6 +9,8 @@
     <header-links></header-links>
 </head>
 <body>
+    <script src="navigation.js"></script>
+    <nav-menu></nav-menu>
     <div id="main-menu">
     </div>
     <div id="slider">
