--- a/navigation.html
+++ b/navigation.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dropdown Menu</title>
-    <link rel="stylesheet" href="navigation.css">
-    <script src="navigation.js" defer></script>
+    <title>Document</title>
 </head>
 <body>
+    
+<template id="nav-menu">
+    <link rel="stylesheet" href="navigation.css">
+
     <menu-container>
         <div class="nav-div">
             <div class="menu-icon" onclick="toggleMenu()">
@@ -44,5 +46,9 @@
             </div>
         </div>
     </menu-container>
+
+</template>
+<script src="navigation.js"></script>
+
 </body>
 </html>
