--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="portfolio.css">
 </head>
 <body>
+    <script src="navigation.js"></script>
+    <nav-menu></nav-menu>
     <h1>Websites</h1>
     <section class="swiper-section">
         <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
