--- a/project/lift99-dao.html
+++ b/project/lift99-dao.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="project.css">
 </head>
 <body style="background: #311742;">
+    <script src="navigation.js"></script>
+    <nav-menu></nav-menu>
     <img class="fullwidth" src="../assets/dao 1.png">
     <section>
         <div class="h1div">
