--- a/cv.html
+++ b/cv.html
@@ -9,6 +9,8 @@
     <header-links></header-links>
 </head>
 <body>
+    <script src="navigation.js"></script>
+    <nav-menu></nav-menu>
     <html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>Zeina Saade CV</title><style>
         /* cspell:disable-file */
         /* webkit printing magic: print all background colors */
