--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <header-links></header-links>
 </head>
 <body>
+    <script src="navigation.js"></script>
+    <nav-menu></nav-menu>
     <div class="background" id="backgroundA"><p class="p-a">CV<br>&<br>STUFF</p></div>
     <div class="background" id="backgroundB"><p class="p-b">PORTFOLIO<br>&<br>STUFF</p></div>
     <div id="custom-cursor"></div>
