--- a/project/active-mode.html
+++ b/project/active-mode.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="project.css">
 </head>
 <body style="background-image : linear-gradient(1deg, #1BB5CA 0%, #24163C 100%);">
+    <script src="navigation.js"></script>
+    <nav-menu></nav-menu>
     <img class="fullwidth" src="../assets/am 1.png" >
     <section>
         <div class="h1div">
