--- a/project/help99.html
+++ b/project/help99.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="project.css">
 </head>
 <body style="background-image: linear-gradient(155deg, #043016 5.33%, rgba(31, 48, 29, 0.66) 36.6%, #0F2F04 90.9%);">
+    <script src="navigation.js"></script>
+    <nav-menu></nav-menu>
     <img class="fullwidth" src="../assets/help99 1.png">
     <section>
         <div class="h1div">
