--- a/project/zbuzz.html
+++ b/project/zbuzz.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="project.css">
 </head>
 <body style="background-image: linear-gradient(155deg, #544B00 5.33%, rgba(20, 20, 19, 0.66) 36.6%, #2D4127 90.9%);">
+    <script src="navigation.js"></script>
+    <nav-menu></nav-menu>
     <img class="fullwidth" src="../assets/zbuzz 1.png">
     <section>
         <div class="h1div">
