--- a/project/lift99-dao.html
+++ b/project/lift99-dao.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="project.css">
 </head>
 <body style="background: #311742;">
-    <script src="navigation.js"></script>
-    <nav-menu></nav-menu>
+    <nav-menu base-path="../"></nav-menu>
     <img class="fullwidth" src="../assets/dao 1.png">
     <section>
         <div class="h1div">
@@ -40,5 +39,6 @@
         <img class="fullwidth" src="../assets/dao 3.png">
     </section>
     <script src="project.js"></script>
+    <script src="../navigation.js"></script>
 </body> 
 </html>
