--- a/project/lift99-hr.html
+++ b/project/lift99-hr.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="project.css">
 </head>
 <body style="background: #253946;">
-    <script src="navigation.js"></script>
-    <nav-menu></nav-menu>
+    <nav-menu base-path="../"></nav-menu>
     <img class="fullwidth" src="../assets/hr 1.png">
     <section>
         <div class="h1div">
@@ -69,5 +68,6 @@
         <img class="fullwidth" src="../assets/hr 4.png">
     </section>
     <script src="project.js"></script>
+    <script src="../navigation.js"></script>
 </body> 
 </html>
