--- a/project/Leonardite.html
+++ b/project/Leonardite.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="project.css">
 </head>
 <body style="background-image: linear-gradient(155deg, #043016 5.33%, rgba(55, 90, 50, 0.66) 36.6%, #0F2F04 90.9%);">
-    <script src="navigation.js"></script>
-    <nav-menu></nav-menu>
+    <nav-menu base-path="../"></nav-menu>
     <img class="fullwidth" src="../assets/AAZ web preview-min.png">
     <section>
         <div class="h1div">
@@ -44,5 +43,6 @@
         <img class="fullwidth" src="../assets/leo 8.jpeg" style="border-radius: 20px;">
     </section>
     <script src="project.js"></script>
+    <script src="../navigation.js"></script>
 </body> 
 </html>
