--- a/project/active-mode.html
+++ b/project/active-mode.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="project.css">
 </head>
 <body style="background-image : linear-gradient(1deg, #1BB5CA 0%, #24163C 100%);">
-    <script src="navigation.js"></script>
-    <nav-menu></nav-menu>
+    <nav-menu base-path="../"></nav-menu>
     <img class="fullwidth" src="../assets/am 1.png" >
     <section>
         <div class="h1div">
@@ -80,5 +79,6 @@
         <img class="fullwidth" src="../assets/am 8.png" style="width: 70%;">
     </section>
     <script src="project.js"></script>
+    <script src="../navigation.js" defer></script>
 </body> 
 </html>
