--- a/project/sudoculus.html
+++ b/project/sudoculus.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="project.css">
 </head>
 <body style="background-image : linear-gradient(1deg, #1BB5CA 0%, #24163C 100%);">
-    <script src="navigation.js"></script>
-    <nav-menu></nav-menu>
+    <nav-menu base-path="../"></nav-menu>
     <img class="fullwidth" src="../assets/sudoculus 1.png" style="width: 50%; margin-left: 25%;">
     <section>
         <div class="h1div">
@@ -58,5 +57,6 @@
         <img class="fullwidth" style="width: 70vw;" src="../assets/sudoculus 5.png">
     </section>
     <script src="project.js"></script>
+    <script src="../navigation.js"></script>
 </body> 
 </html>
