index issue fixed

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 </head>
 <body>
     <nav-menu></nav-menu>
-    <div class="background" id="backgroundA"><p class="p-a">CV<br>&<br>STUFF</p></div>
-    <div class="background" id="backgroundB"><p class="p-b">PORTFOLIO<br>&<br>STUFF</p></div>
-    <div id="custom-cursor"></div>
+    <div style="position: fixed;">
+        <div class="background" id="backgroundA"><p class="p-a">CV<br>&<br>STUFF</p></div>
+        <div class="background" id="backgroundB"><p class="p-b">PORTFOLIO<br>&<br>STUFF</p></div>
+        <div id="custom-cursor"></div>
+    </div>
     <script src="index.js"></script>
     <script src="navigation.js"></script>
 </body>
