--- a/project/Leonardite.html
+++ b/project/Leonardite.html
@@ -25,22 +25,22 @@
         </p> 
     </section>
     <section>
-        <img class="fullwidth" style="width: 90%;" src="../assets/leo 5.png">
+        <img class="fullwidth w90" src="../assets/leo 5.png">
     </section>
     <section>
-        <img class="fullwidth" style="width: 80%; right: 0; top: -40px;" src="../assets/leo 3.png">
+        <img class="fullwidth w80 r-non" style="top: -40px;" src="../assets/leo 3.png">
     </section>
     <section>
-        <img class="fullwidth" style="width: 80%; right: 0; top: -40px;" src="../assets/leo 4.png">
+        <img class="fullwidth w80 r-non" style="top: -40px;" src="../assets/leo 4.png">
     </section>
     <section>
-        <img class="fullwidth" src="../assets/leo 6.jpeg" style="border-radius: 20px;">
+        <img class="fullwidth radius20" src="../assets/leo 6.jpeg">
     </section>
     <section>
-        <img class="fullwidth" src="../assets/leo 7.jpg" style="border-radius: 20px;">
+        <img class="fullwidth radius20" src="../assets/leo 7.jpg">
     </section>
     <section>
-        <img class="fullwidth" src="../assets/leo 8.jpeg" style="border-radius: 20px;">
+        <img class="fullwidth radius20" src="../assets/leo 8.jpeg">
     </section>
     <script src="project.js"></script>
     <script src="../navigation.js"></script>
