--- a/project/artbay.html
+++ b/project/artbay.html
@@ -8,9 +8,9 @@
     <header-links-projects></header-links-projects>
     <link rel="stylesheet" href="project.css">
 </head>
-<body style="background-image: linear-gradient(155deg, #043016 5.33%, rgba(55, 90, 50, 0.66) 36.6%, #0F2F04 90.9%);">
+<body style="background-image: linear-gradient(180deg, rgba(193, 164, 110, 0.70) 36.64%, rgba(213, 189, 142, 0.31) 94.95%);">
     <nav-menu base-path="../"></nav-menu>
-    <img class="fullwidth" src="../assets/artbay 1.jpg">
+    <img class="fullwidth" src="../assets/artbay 1.png">
     <section>
         <div class="h1div">
             <h1>ArtBay</h1>
@@ -25,19 +25,19 @@
         </p> 
     </section>
     <section>
-        <img class="fullwidth" style="width: 90%;" src="../assets/artbay 2.jpg">
+        <img class="fullwidth w90" src="../assets/artbay 2.png">
     </section>
     <section>
-        <img class="fullwidth" style="width: 80%; right: 0; top: -40px;" src="../assets/artbay 3.jpg">
+        <img class="fullwidth w80 r-non" style="top: -40px;" src="../assets/artbay 3.png">
     </section>
     <section>
-        <img class="fullwidth" style="width: 80%; right: 0; top: -40px;" src="../assets/artbay 4.jpg">
+        <img class="fullwidth w80 r-non" style="top: -40px;" src="../assets/artbay 4.png">
     </section>
     <section>
-        <img class="fullwidth" src="../assets/artbay 5.jpg" style="border-radius: 20px;">
+        <img class="fullwidth radius20" src="../assets/artbay 5.png">
     </section>
     <section>
-        <img class="fullwidth" src="../assets/artbay 6.jpg" style="border-radius: 20px;">
+        <img class="fullwidth w60 radius20" src="../assets/artbay 6.png">
     </section>
     <script src="project.js"></script>
     <script src="../navigation.js"></script>
