--- a/project/coaching.html
+++ b/project/coaching.html
@@ -8,7 +8,7 @@
     <header-links-projects></header-links-projects>
     <link rel="stylesheet" href="project.css">
 </head>
-<body style="background-image: linear-gradient(155deg, #043016 5.33%, rgba(55, 90, 50, 0.66) 36.6%, #0F2F04 90.9%);">
+<body style="background-color: #847865;">
     <nav-menu base-path="../"></nav-menu>
     <img class="fullwidth" src="../assets/coach 1.png">
     <section>
@@ -40,7 +40,7 @@
             </p>
             <img style="position: absolute; right: -300px; top: 30px;" src="../assets/arrow 4.svg" >
         </div>
-        <img class="fullwidth" style="width: 60%;" src="../assets/coach 3.png">
+        <img class="fullwidth w60" src="../assets/coach 3.png">
     </section>
     <script src="project.js"></script>
     <script src="../navigation.js"></script>
