--- a/project/help99.html
+++ b/project/help99.html
@@ -40,7 +40,7 @@
             </p>
             <img style="position: absolute; right: -260px; top: 60px;" src="../assets/arrow 4.svg" >
         </div>
-        <img class="fullwidth" style="width: 60%;" src="../assets/help99 3.png">
+        <img class="fullwidth w60" src="../assets/help99 3.png">
     </section>
     <section>
         <div class="arrowdiv">
