--- a/project/lift99-dao.html
+++ b/project/lift99-dao.html
@@ -25,7 +25,7 @@
         </p> 
     </section>
     <section>
-        <img class="fullwidth" style="width: 95%;" src="../assets/dao 2.png">
+        <img class="fullwidth w90" src="../assets/dao 2.png">
     </section>
     <section>
         <p>
