--- a/project/lift99-hr.html
+++ b/project/lift99-hr.html
@@ -31,7 +31,7 @@
             </p>
             <img style="position: absolute; right: -120px; top: 65px;" src="../assets/arrow 1.svg" >
         </div>
-        <img class="fullwidth" style="width: 95%;" src="../assets/hr 2.png">
+        <img class="fullwidth w90" src="../assets/hr 2.png">
         <div class="arrowdiv">
             <p style="margin-top: -120px;">
                 + Company portal<br>
