--- a/project/sudoculus.html
+++ b/project/sudoculus.html
@@ -10,7 +10,7 @@
 </head>
 <body style="background-image : linear-gradient(1deg, #1BB5CA 0%, #24163C 100%);">
     <nav-menu base-path="../"></nav-menu>
-    <img class="fullwidth" src="../assets/sudoculus 1.png" style="width: 50%; margin-left: 25%;">
+    <img class="fullwidth w50" src="../assets/sudoculus 1.png">
     <section>
         <div class="h1div">
             <h1>Sudoculus</h1>
@@ -38,7 +38,7 @@
             </p>
             <img style="position: absolute; right: -280px; top: 30px; width: 80%; margin-right: 0;" src="../assets/arrow 4.svg" >
         </div> -->
-        <img class="fullwidth" src="../assets/sudoculus 3.png" style="width: 80%;">
+        <img class="fullwidth w80" src="../assets/sudoculus 3.png">
     </section>
     <section>
         <img class="fullwidth" src="../assets/sudoculus 4.png">
@@ -54,7 +54,7 @@
             </p>
             <img style="position: absolute; right: -280px; top: 30px;" src="../assets/arrow 4.svg" >
         </div> -->
-        <img class="fullwidth" style="width: 70vw;" src="../assets/sudoculus 5.png">
+        <img class="fullwidth w70" src="../assets/sudoculus 5.png">
     </section>
     <script src="project.js"></script>
     <script src="../navigation.js"></script>
