--- a/project/zbuzz.html
+++ b/project/zbuzz.html
@@ -43,7 +43,7 @@
         <img class="fullwidth" src="../assets/zbuzz 2.png">
     </section>
     <section>
-        <img class="fullwidth" style="width: 80%; margin-left: 0;" src="../assets/zbuzz 3.png">
+        <img class="fullwidth w80 l-non" src="../assets/zbuzz 3.png">
         <div class="arrowdiv">
             <p>
                 + Popup link divs on pictures
@@ -58,7 +58,7 @@
             </p>
             <img style="position: absolute; right: -280px; top: 30px;" src="../assets/arrow 4.svg" >
         </div>
-        <img class="fullwidth" style="width: 80vw; margin-right: 0;" src="../assets/zbuzz 4.png">
+        <img class="fullwidth w80 r-non" src="../assets/zbuzz 4.png">
     </section>
     <section>
         <div class="arrowdiv">
