--- a/project/active-mode.html
+++ b/project/active-mode.html
@@ -25,58 +25,25 @@
         </p> 
     </section>
     <section>
-        <!-- <div class="arrowdiv">
-            <p>
-            </p>
-            <img style="position: absolute; right: -280px; top: 30px;" src="../assets/arrow 4.svg" >
-        </div> -->
         <img class="fullwidth" src="../assets/am 2.png">
     </section>
     <section>
-        <!-- <div class="arrowdiv">
-            <p>
-            </p>
-            <img style="position: absolute; right: -280px; top: 30px; width: 80%; margin-right: 0;" src="../assets/arrow 4.svg" >
-        </div> -->
         <img class="fullwidth" src="../assets/am 3.png">
     </section>
     <section>
         <img class="fullwidth" src="../assets/am 4.png">
-        <!-- <div class="arrowdiv">
-            <p>
-            </p>
-            <img style="position: absolute; right: -300px; top: 30px; transform: scaleY(-1);" src="../assets/arrow 4.svg" >
-        </div> -->
     </section>
     <section>
-        <!-- <div class="arrowdiv">
-            <p>
-            </p>
-            <img style="position: absolute; right: -280px; top: 30px;" src="../assets/arrow 4.svg" >
-        </div> -->
-        <img class="fullwidth" style="width: 70vw;" src="../assets/am 5.png">
+        <img class="fullwidth w70" src="../assets/am 5.png">
     </section>
     <section>
-        <!-- <div class="arrowdiv">
-            <p>
-            </p>
-            <img style="position: absolute; right: -280px; top: 30px;" src="../assets/arrow 4.svg" >
-        </div> -->
-        <img class="fullwidth" src="../assets/am 6.png" style="width: 60%;">
+        <img class="fullwidth w60" src="../assets/am 6.png">
     </section>
     <section>
-        <!-- <div class="arrowdiv">
-            <p>
-            </p>
-        </div> -->
-        <img class="fullwidth" src="../assets/am 7.png" style="width: 60%; margin-left: 0;">
+        <img class="fullwidth w60 l-non" src="../assets/am 7.png">
     </section>
     <section>
-        <!-- <div class="arrowdiv">
-            <p>
-            </p>
-        </div> -->
-        <img class="fullwidth" src="../assets/am 8.png" style="width: 70%;">
+        <img class="fullwidth w70" src="../assets/am 8.png">
     </section>
     <script src="project.js"></script>
     <script src="../navigation.js" defer></script>
