testing for phone

--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,7 @@
         </swiper-container>
     </section>
     <h1>Logo design</h1>
-    <section class="swiper-section">
+    <section class="swiper-section logo-section">
         <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
             <swiper-slide>
                 <div class="logo-div" style="background-image: url(assets/Active\ mode\ logo\ bg-min.jpg);">
