--- a/portfolio.html
+++ b/portfolio.html
@@ -224,7 +224,7 @@
     </section>
     <h1>Something cool</h1>
     <section style="margin-bottom: 60px;">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/bOcN1J2Hgeo?autoplay=1&loop=1&playlist=bOcN1J2Hgeo&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/bOcN1J2Hgeo?autoplay=1&loop=1&playlist=bOcN1J2Hgeo&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </section>
     <script src="navigation.js"></script>
 </body>
