--- a/cv.html
+++ b/cv.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zeina's CV</title>
-    <link rel="stylesheet" href="cv.css">
+    <link rel="stylesheet" href="cv2.css">
     <script src="elements.js"></script>
     <header-links></header-links>
 </head>
