--- a/portfolio.html
+++ b/portfolio.html
@@ -82,7 +82,7 @@
                 </div>
             </swiper-slide>
             <swiper-slide>
-                <div class="logo-div" style="background-image: url(assets/Emuse\ logo\ bg-min.jpg);" >
+                <div class="logo-div" style="background-image: url(assets/Emuse\ logo\ bg.jpg);" >
                     <img class="logo-img" src="assets/emuse logo.png">
                 </div>
             </swiper-slide>
@@ -145,7 +145,7 @@
                 <a class="morebutton" href="project/sudoculus.html">Check it out -></a>
             </swiper-slide>
             <swiper-slide>
-                <div class="logo-div" style="background-image: url(assets/Amal\ logo\ bg-min.jpg);" >
+                <div class="logo-div" style="background-image: url(assets/Amal\ logo\ bg.jpg);" >
                     <img class="logo-img" src="assets/amal logo.png">
                 </div>
             </swiper-slide>
